--- a/src/styles/pages/AboutUs.module.css
+++ b/src/styles/pages/AboutUs.module.css
@@ -26,3 +26,34 @@
   gap: 1.2rem;
   justify-content: center;
 }
+
+@media (max-width: 1200px) {
+  .grid {
+    padding-top: 2rem;
+    padding-right: 3.5rem;
+    padding-left: 3.5rem;
+  }
+  .grid > * {
+    flex: 1 1 40%;
+    max-width: 40%;
+  }
+}
+
+@media (max-width: 768px) {
+  .grid {
+    padding-top: 2rem;
+    padding-right: 2.5rem;
+    padding-left: 2.5rem;
+  }
+  .grid > * {
+    flex: 1 1 47%;
+    max-width: 47%;
+  }
+}
+
+@media (max-width: 480px) {
+  .grid > * {
+    flex: 1 1 95%;
+    max-width: 95%;
+  }
+}
